RESOLVED FIXED86258
[chromium] Prevent deadlock on CCVideoLayerImpl destruction
https://bugs.webkit.org/show_bug.cgi?id=86258
Summary [chromium] Prevent deadlock on CCVideoLayerImpl destruction
Adrienne Walker
Reported 2012-05-11 15:23:46 PDT
[chromium] Prevent deadlock on CCVideoLayerImpl destruction
Attachments
Patch (2.94 KB, patch)
2012-05-11 15:31 PDT, Adrienne Walker
no flags
Adrienne Walker
Comment 1 2012-05-11 15:31:22 PDT
Adrienne Walker
Comment 2 2012-05-11 15:33:24 PDT
jamesr: Your suggestion to use CCLayerTreeHost::acquireLayerTextures to block the compositor thread from using a destroyed provider worked great in the case where you had another commit and much less great when the tree got destroyed and it was unclear whether a client should clear its provider pointer or not.
James Robinson
Comment 3 2012-05-11 15:36:41 PDT
Comment on attachment 141510 [details] Patch R=me
Nat Duca
Comment 4 2012-05-11 15:48:47 PDT
WIN
Andrew Scherkus
Comment 5 2012-05-11 16:26:43 PDT
I also sense great win in this patch.
WebKit Review Bot
Comment 6 2012-05-11 19:04:03 PDT
Comment on attachment 141510 [details] Patch Clearing flags on attachment: 141510 Committed r116833: <http://trac.webkit.org/changeset/116833>
WebKit Review Bot
Comment 7 2012-05-11 19:04:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.